--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <form action="login.php" method="post" autocomplete="on">
              <div class="campo">
                 <span class="material-symbols-outlined">login</span>
-                <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="25">
+                <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required max length="25">
                 <label for="ilogin">Login</label>
              </div>
              <div class="campo">
@@ -31,7 +31,7 @@
                 <label for="isenha">Senha</label>
              </div>
               <input type="submit" value="Entrar">
-              <a href="esqueci.html">Esqueci a senha
+              <a href="esqueci.html" class="botao">Esqueci a senha
                 
                 
 
